2006-01-20  Reiner Steib  <Reiner.Steib@gmx.de>

	* gmm-utils.el: New file.
	(gmm-verbose, gmm-message, gmm-error): From gnus-utils.el.
	(gmm-lazy): New widget copied from `nnmail.el'.
	(gmm-tool-bar-from-list): New function for creating customizable
	tool bars.
	(gmm-tool-bar-from-list): Fix typos in doc string.  Remove debug
	output.
	(gmm): Add :prefix to defgroup.

2006-01-20  Per Abrahamsen  <abraham@dina.kvl.dk>

	* gmm-utils.el (gmm-widget-p): New function.

2006-01-20  Reiner Steib  <Reiner.Steib@gmx.de>

	* mml.el (mml-attach-file): Describe `description' in doc string.
	(mml-menu): Add Emacs MIME manual and PGG manual.

2005-12-12  Richard M. Stallman  <rms@gnu.org>

	* mm-url.el (mm-url-load-url): Require url-parse and url-vars.

2005-11-14  Kevin Greiner  <kevin.greiner@compsol.cc>

	* nntp.el (nntp-end-of-line): Doc fix.

2005-11-04  Ken Manheimer  <ken.manheimer@gmail.com>

	* pgg-pgp.el (pgg-pgp-encrypt-region, pgg-pgp-decrypt-region)
	(pgg-pgp-sign-region): Add optional 'passphrase' argument to all
	these routines, so the passphrase can be managed externally and
	passed in to the system.
	(pgg-pgp-decrypt-region, pgg-pgp-sign-region): Use new name for
	pgg-add-passphrase-to-cache function.

	* pgg-pgp5.el (pgg-pgp5-encrypt-region, pgg-pgp5-decrypt-region)
	(pgg-pgp5-sign-region): Add optional 'passphrase' argument to all
	these routines, so the passphrase can be managed externally and
	passed in to the system.
	(pgg-pgp5-sign-region): Use new name of
	pgg-add-passphrase-to-cache function.

2005-10-30  Chong Yidong  <cyd@stupidchicken.com>

	* imap.el (imap-open): Handle case where buffer is a buffer
	object.

2005-10-29  Ken Manheimer  <ken.manheimer@gmail.com>

	* pgg-gpg.el (pgg-gpg-select-matching-key): Fix: look at the right
	part of the decoded armor to find the key-identifier.
	(pgg-gpg-lookup-key-owner): New function to return the
	human-readable identifier of a key owner.
	(pgg-gpg-key-id-from-key-owner): Make it easy to identify the key